@@ -326,6 +326,8 @@ player_open_output(struct player *player)
 		pc->state = PLAYER_STATE_PAUSE;
 		player_unlock(pc);
 
+		idle_add(IDLE_PLAYER);
+
 		return false;
 	}
 }
@@ -800,6 +802,8 @@ play_next_chunk(struct player *player)
 
 		player_unlock(pc);
 
+		idle_add(IDLE_PLAYER);
+
 		return false;
 	}
 
@@ -845,12 +849,16 @@ player_song_border(struct player *player)
 	struct player_control *const pc = player->pc;
 	player_lock(pc);
 
-	if (pc->border_pause) {
+	const bool border_pause = pc->border_pause;
+	if (border_pause) {
 		player->paused = true;
 		pc->state = PLAYER_STATE_PAUSE;
 	}
 
 	player_unlock(pc);
+
+	if (border_pause)
+		idle_add(IDLE_PLAYER);
 
 	return true;
 }
