@@ -1,6 +1,8 @@
 ver 0.17.4 (2013/??/??)
 * decoder:
   - ffmpeg: support float planar audio (ffmpeg 1.1)
+* player:
+  - implement missing "idle" events on output errors
 
 
 ver 0.17.3 (2013/01/06)
